# bevy_sky_gradient

./: Cargo.toml  justfile
.github/workflows/: ci.yml
assets/shaders/: full_gradient.wgsl  gradient.wgsl
examples/: custom_day_night_cycle.rs  edit_day_night_cycle.rs
src/: ambient_driver.rs  assets.rs  aurora.rs  aurora_material.rs  bind_groups.rs  cycle.rs  gradient.rs  gradient_driver.rs  gradient_material.rs  lib.rs  noise.rs  plugin.rs  presets.rs  sky_texture.rs  sun.rs  utils.rs
